--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@
 
 <body>
     <div class="calendar">
-        <input class="input" type="text" placeholder="选择日期" readonly>
+        <label>
+            <input class="input" type="text" placeholder="选择日期" readonly/>
+        </label>
         <div class="container">
         </div>
     </div>
-
 
     <script>
         let $ = document.querySelector.bind(document)
